--- a/modules/atc/cloud-config.yml
+++ b/modules/atc/cloud-config.yml
@@ -66,6 +66,8 @@ write_files:
       Environment="CONCOURSE_SESSION_SIGNING_KEY=/concourse/keys/web/session_signing_key"
       Environment="CONCOURSE_ENCRYPTION_KEY=${encryption_key}"
       Environment="CONCOURSE_OLD_ENCRYPTION_KEY=${old_encryption_key}"
+      ${prometheus_bind_ip}
+      ${prometheus_bind_port}
 
       ExecStartPre=/bin/bash -c "/bin/systemctl set-environment CONCOURSE_PEER_URL=http://$(curl -L http://169.254.169.254/latest/meta-data/local-ipv4):${atc_port}"
       ExecStart=/usr/local/bin/concourse web --aws-secretsmanager-region=${region}
