Add node-exporter to concourse image

--- a/modules/atc/cloud-config.yml
+++ b/modules/atc/cloud-config.yml
@@ -74,6 +74,22 @@ write_files:
 
       [Install]
       WantedBy=multi-user.target
+  - path: "/etc/systemd/system/node_exporter.service"
+    permissions: "0644"
+    owner: "root"
+    content: |
+      [Unit]
+      Description=Node exporter for Prometheus to scrape
+      Requires=network-online.target
+      After=network-online.target
+
+      [Service]
+      Type=simple
+      Restart=always
+      ExecStart=/usr/local/bin/node_exporter
+
+      [Install]
+      WantedBy=multi-user.target
   - path: "/etc/systemd/system/concourse-logging.service"
     permissions: "0644"
     owner: "root"
