--- a/modules/atc/cloud-config.yml
+++ b/modules/atc/cloud-config.yml
@@ -57,7 +57,13 @@ write_files:
       Environment="CONCOURSE_BASIC_AUTH_PASSWORD=${basic_auth_password}"
       Environment="CONCOURSE_GITHUB_AUTH_CLIENT_ID=${github_client_id}"
       Environment="CONCOURSE_GITHUB_AUTH_CLIENT_SECRET=${github_client_secret}"
-      Environment="CONCOURSE_POSTGRES_DATA_SOURCE=${concourse_postgres_source}"
+
+      Environment="CONCOURSE_POSTGRES_HOST=${postgres_host}"
+      Environment="CONCOURSE_POSTGRES_PORT=${postgres_port}"
+      Environment="CONCOURSE_POSTGRES_USER=${postgres_username}"
+      Environment="CONCOURSE_POSTGRES_PASSWORD=${postgres_password}"
+      Environment="CONCOURSE_POSTGRES_DATABASE=${postgres_database}"
+
       Environment="CONCOURSE_EXTERNAL_URL=${concourse_web_host}"
       Environment="CONCOURSE_LOG_LEVEL=${log_level}"
       Environment="CONCOURSE_TSA_LOG_LEVEL=${log_level}"
