--- a/modules/worker/cloud-config.yml
+++ b/modules/worker/cloud-config.yml
@@ -49,6 +49,7 @@ write_files:
       RestartSec=30s
       TimeoutStartSec=5m
       TimeoutStopSec=1h
+      KillMode=process
 
       Environment="CONCOURSE_TEAM=${worker_team}"
       Environment="CONCOURSE_BIND_IP=0.0.0.0"
@@ -65,8 +66,7 @@ write_files:
       ExecStart=/usr/local/bin/concourse worker
 
       ExecStop=/usr/local/bin/concourse retire-worker
-      ExecStop=/bin/bash -c "while pgrep concourse; do sleep 5; done"
-      ExecStop=/bin/kill -s TERM -- $MAINPID
+      ExecStop=/bin/bash -c "while pgrep concourse >> /dev/null; do echo draining worker... && sleep 5; done; echo done draining!"
 
       [Install]
       WantedBy=multi-user.target
