--- a/modules/atc/cloud-config.yml
+++ b/modules/atc/cloud-config.yml
@@ -74,7 +74,7 @@ write_files:
       ${prometheus_bind_port}
 
       ExecStartPre=/bin/bash -c "/bin/systemctl set-environment CONCOURSE_PEER_URL=http://$(curl -L http://169.254.169.254/latest/meta-data/local-ipv4):${atc_port}"
-      ExecStart=/usr/local/bin/concourse web --aws-secretsmanager-region=${region}
+      ExecStart=/usr/local/bin/aws-env exec -- /usr/local/bin/concourse web --aws-secretsmanager-region=${region}
 
       [Install]
       WantedBy=multi-user.target
