Fix lifecycled systemd unit

--- a/modules/worker/cloud-config.yml
+++ b/modules/worker/cloud-config.yml
@@ -114,7 +114,8 @@ write_files:
 
       [Service]
       Type=simple
-      Restart=always
+      Restart=on-failure
+      RestartSec=30s
       TimeoutSec=infinity
 
       Environment="AWS_REGION=${region}"
