Set AWS_REGION in travis to satisfy terraform

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 dist: trusty
 sudo: true
 
+env:
+  - AWS_REGION=eu-west-1
+
 before_install:
   - curl -fSL "https://releases.hashicorp.com/terraform/0.12.3/terraform_0.12.3_linux_amd64.zip" -o terraform.zip
   - sudo unzip terraform.zip -d /opt/terraform
