--- a/modules/atc/cloud-config.yml
+++ b/modules/atc/cloud-config.yml
@@ -114,6 +114,19 @@ write_files:
 
       [Install]
       WantedBy=multi-user.target
+  - path: "/etc/logrotate.d/concourse"
+    permissions: "0644"
+    owner: "root"
+    content: |
+      /var/log/concourse.log {
+          create 0644 root root
+          daily
+          rotate 1
+          size 100M
+          postrotate
+              systemctl restart concourse-logging awslogsd
+          endscript
+      }
   - path: "/usr/local/scripts/cloudformation-signal.sh"
     permissions: "0744"
     owner: "root"
