--- a/modules/cloud-init/atc.yml
+++ b/modules/cloud-init/atc.yml
@@ -47,6 +47,7 @@ write_files:
       Environment="CONCOURSE_ENCRYPTION_KEY=${encryption_key}"
       Environment="CONCOURSE_OLD_ENCRYPTION_KEY=${old_encryption_key}"
       Environment="CONCOURSE_AWS_SECRETSMANAGER_REGION=${region}"
+      Environment="CONCOURSE_CONTAINER_PLACEMENT_STRATEGY=${placement_strategy}"
 
       %{ if local_user != "" }Environment="CONCOURSE_ADD_LOCAL_USER=${local_user}"%{ endif }
       %{ if local_admin_user != "" }Environment="CONCOURSE_MAIN_TEAM_LOCAL_USER=${local_admin_user}"%{ endif }
