--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,25 @@
 name: workflow
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v1
+    - name: Checkout
+      uses: actions/checkout@v2
+
     - name: Install Go
       uses: actions/setup-go@v1
-      with: { go-version: 1.13 }
+      with: { go-version: 1.14 }
+
     - name: Install Terraform
       run: |
-        curl -sL https://releases.hashicorp.com/terraform/0.12.8/terraform_0.12.8_linux_amd64.zip -o terraform.zip
+        curl -sL https://releases.hashicorp.com/terraform/0.12.21/terraform_0.12.21_linux_amd64.zip -o terraform.zip
         sudo unzip terraform.zip -d /usr/bin && rm -f terraform.zip
+
     - name: Install Taskfile
       run: curl -sL https://taskfile.dev/install.sh | sh
+
     - name: Run tests
       run: ./bin/task test
