--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -40,7 +40,7 @@ tasks:
         cd $d
         echo "${BOLD}$PWD:${NORM}"
 
-        if ! terraform fmt -check=true -list=false -recursive=false; then
+        if ! terraform fmt -check=true -list=false -recursive=true; then
           echo "  ✗ terraform fmt" && exit 1
         else
           echo "  √ terraform fmt"
